Updated files and added lab

--- a/module-4/Thanadabouth_Mod4_2.css
+++ b/module-4/Thanadabouth_Mod4_2.css
@@ -4,6 +4,7 @@
 
 h1 {
   color: rgba(78, 107, 75, 1); 
+}
 
 #image-gallery {
   display: grid;
@@ -27,12 +28,14 @@ figure {
 
 figure img {
   border: 3px solid rgba(112, 102, 83, 1); 
+}
 
 figcaption {
   font-style: italic;
   font-size: 0.75em;
   color: rgba(183, 174, 143, 1); 
 }
+
 
 a[href='../index.html'] {
   position: fixed;
